--- a/wxs/price.wxs
+++ b/wxs/price.wxs
@@ -1,16 +1,30 @@
 function mainPrice(price, discountPrice) {
-  if(!discountPrice) {
-    return price
+  if(!discountPrice){
+      return {
+          price:price,
+          display:true
+      }
   }
-  return discountPrice
+  else{
+      return {
+          display:true,
+          price:discountPrice,
+      }
+  }
 }
 
 function slashedPrice(price, discountPrice) {
-  if(discountPrice) {
-    return price
+  if(discountPrice){
+      return {
+          display:true,
+          price:price
+      }
+  }else{
+      return {
+          display:false,
+          price:null
+      }
   }
-
-  return null
 }
 
 module.exports = {
