--- a/components/cell/index.wxss
+++ b/components/cell/index.wxss
@@ -29,3 +29,10 @@
 .s-inner {
   background-color: #157658;
 }
+
+.img {
+  display: flex;
+  width: 44rpx;
+  height: 44rpx;
+  margin-right: 10rpx;
+}
