--- a/components/realm/index.wxss
+++ b/components/realm/index.wxss
@@ -1,7 +1,14 @@
 .container {
   box-sizing: border-box;
-  padding: 30rpx;
+  /* padding: 30rpx; */
   background-color: #fff;
+  max-height: 1000rpx;
+  min-height: 700rpx;
+  margin-bottom: 100rpx;
+}
+
+.inner-container {
+  padding: 30rpx 30rpx 0 30rpx;
 }
 
 .sku-preview {
@@ -60,4 +67,38 @@
   margin-left: 30rpx;
   font-size: 20rpx;
   color: #D20109;
+}
+
+.counter-container {
+  margin-top: 34rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 200rpx;
+}
+
+.counter-container text {
+  color: #555;
+  font-size: 24rpx;
+}
+
+.bottom-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100rpx;
+  background-color: #333;
+  position: absolute;
+  bottom: 0;
+}
+
+.out-stock {
+  background-color: #DCEBE6;
+}
+
+.bottom-btn text {
+  color: #fff;
 }
