--- a/components/sppu-preview/index.wxml
+++ b/components/sppu-preview/index.wxml
@@ -14,14 +14,14 @@
         value-size="28"
         unit-size="20"
         autofix
-        value="{{p.mainPrice(data.price, data.discount_price)}}">
+        value="{{p.mainPrice(data.price, data.discount_price).price}}">
       </l-price>
-      <l-price wx:if="{{data.discount_price?true:false}}"
+      <l-price wx:if="{{p.slashedPrice(data.price,data.discount_price).display}}"
         color="#999"
         size="26"
         l-class="discount-price"
         deleted 
-        value="{{p.slashedPrice(data.price, data.discount_price)}}">
+        value="{{p.slashedPrice(data.price, data.discount_price).price}}">
       </l-price>
     </view>
     <text class="subtitle">{{data.subtitle}}</text>
