--- a/components/tab-bar/index.wxml
+++ b/components/tab-bar/index.wxml
@@ -5,7 +5,7 @@
       <text>首页</text>
     </view>
     <view bind:tap="onGoToCart">
-      <l-badge show="{{cartItemCount !== 0}}" max-count="99">
+      <l-badge value="{{cartItemCount}}" show="{{cartItemCount !== 0}}" max-count="99">
         <l-icon size="44" name="cart" color="#157658"></l-icon>
       </l-badge>
       <text class="cart-text">购物车</text>
